update paper translation

--- a/document.tex
+++ b/document.tex
@@ -74,7 +74,11 @@ BHUMP可以用于电池管理系统，取代传统的等效电路模型进行电
 
 \section{结论}
 
+目前两种被广泛采用的用于在线电池健康状态估计的方法是建立电池的等效电路模型和电化学模型。然而，在在线应用中，要兼顾预测准确性和预测结果计算高效性并不容易。我们提出了一种新的基于机器学习流水线的方法，称为BHUMP。与传统方法相比，我们提出的机器学习流水线有诸多好处，包括对充电协议和放电倍率的鲁棒性，以及能在缺少对电池设计、电池电极材料和工作温度的条件下进行预测。
 
+本文研究了四种作为BHUMP基础的算法，分别是贝叶斯岭回归、高斯过程回归、随机森林和深度神经网络。研究时关注这些算法的预测误差和量化预测结果不确定性的能力。实验结果表明，模型的精度（这里指的是在测试集上取得的最小误差）取决于样本对应的充电协议。对于采用恒流-恒压充电协议和两步快充协议的电池样本，随机森林算法取得了最低的误差，对于采用恒流充电协议的电池样本，贝叶斯岭回归取得了最低误差。需要注意的是，在考虑不确定性评估指标时，随机森林模型很难校准，并且在预测结果上表现出了很强的乐观倾向。以平均增加0.43\%的MAPE和0.97\%的RMSPE为代价，深度神经网络模型通常取得了更好的校准分数，无论充电协议如何，都能取得第二低的误差。对于采用两步快充协议的电池，最好的深度神经网络模型实现了0.45\%的RMSPE，参照90\%的置信区间，校准得分为91.02\%。
+
+综上，我们的工作强调了使用部分充电段作为输入，结合多种机器学习模型进行电池退化状态预测的方法。更重要地，我们强调了在实际工程应用中对预测结果进行不确定性量化的重要性。最后，我们证明了我们提出的机器学习流水线方法在计算效率和结果准确性方面的优势。我们认为，这种机器学习管道方法在未来的电池管理系统中将成为标准化应用。
 
 \section{方法}
 
