update document, retranslate abstract

--- a/document.tex
+++ b/document.tex
@@ -6,7 +6,8 @@
 \usepackage{graphicx}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
-\title{基于机器学习模型的电池健康状态估计方法}
+\title{基于机器学习流水线的电池健康状态估计方法}
+
 \author[1]{\small Darius Roman}
 \author[2, 4]{Saurabh Saxena}
 \author[1, 3, 5]{Valentin Robu}
@@ -25,7 +26,7 @@
 \maketitle
 
 \begin{abstract}
-从便携式电子产品到电动汽车，锂离子电池在各种场景中的应用愈发广泛。无论在哪种应用场景下，通过设备板载控制器对电池健康状态（SOH）进行实时可靠地估计都是保证电池安全运行的关键性步骤。实际应用中往往使用电池容量作为电池性能退化指标，在这篇文章里，我们设计并评估了一种基于机器学习的电池容量估计方法，并在179块电池（在不同工况下工作）的循环数据上进行测试。本文的模型使用了两个参数化方法和两个非参数化方法，实现了电池健康状态估计并给出估计结果的置信区间。算法使用充电过程中的部分电压和电流数据进行自动特征选择和算法标定，最终提取了三十个特征。我们将训练好的机器学习模型部署在使用快充策略的电池上，达到均方根误差仅0.45\% 的预测精度。我们的方法为设计灵活可拓展的数据驱动的电池健康状态估计模型提供了洞见，同时强调了预测置信区间的重要性。该一方法结合了实验数据和机器学习建模，可应用于其他需要实时估计健康状态的关键部件。
+从便携电子设备到电动汽车，锂离子电池在各种场景中的应用越发广泛。无论哪种应用场景，都要求通过设备机载控制器对电池健康状态（state of health，SOH）进行实时可靠地估计以保证电池安全运行并最终保证系统的完整性和可靠性。实际应用中通常使用电池容量作为电池性能退化指标，本文设计并评估了一种基于机器学习流水线的电池容量估计方法，并在179块电池（分别在不同工况下工作）的循环数据上进行测试。本文的模型使用了两个参数化方法和两个非参数化方法，实现了电池SOH估计并给出估计结果的置信区间。机器学习流水线模型从充电过程中的部分电压和电流数据中提取了三十个特征并进行自动特征选择和算法标定步骤。当把机器学习流水线模型部署在使用快充策略的电池数据集上时，算法达到均方根误差（root mean squared error，RMSE）仅0.45\% 的预测精度。我们的方法为设计灵活可拓展的数据驱动的电池SOH估计模型提供了深刻理解，同时强调了预测置信区间的重要性。我们提出的机器学习流水线方法结合了实验数据和机器学习建模，可应用于其他需要实时估计SOH的关键部件。
 \end{abstract}
 
 \section{简介}
