--- a/document.tex
+++ b/document.tex
@@ -31,9 +31,7 @@
 
 \section{简介}
 
-可充电锂离子电池在许多应用领域中都扮演着重要角色，包括便携式电子设备、医疗设备、电网的可再生能源消纳环节和电动汽车等。在2010年至2016年期间，锂离子电池价格陡降73％，在2017年达到历史最低点，为每千瓦时273美元\cite{ref1}，这为估值高达650亿美元的巨大的储能市场打开了大门。不管应用场景如何，锂离子电池随着时间而老化，且在老化过程中，电池呈现出容量降低、内阻增大的趋势。
-
-电池的老化速度受动态运行条件影响，包括不同的充放电速率、不同的运行电压限制和运行过程中的温度变化。能够不依赖具体机理、使用数据驱动方法实现实时电池退化状态估计对是安全、有效的电池管理系统中非常重要的环节。电池健康状态可以用来预测电池的预期寿命，但是通过直接测量电池内部电化学反应参数来进行在线电池健康状态估计的方法目前仍十分有限。
+可充电锂离子电池在许多应用领域中都扮演着重要角色，包括便携式电子设备、医疗设备、电网的可再生能源消纳环节和电动汽车等。在2010年至2016年期间，锂离子电池价格陡降73％，在2017年达到历史最低点，为每千瓦时273美元\cite{ref1}，这为估值高达650亿美元的巨大的储能市场打开了大门\cite{ref2}。不管应用场景如何，锂离子电池随着时间而老化，且在老化过程中，电池呈现出容量降低、内阻增大的趋势。电池的老化速度受动态运行条件影响，包括不同的充放电速率、不同的运行电压限制和运行过程中的温度变化。能够不依赖具体机理、使用数据驱动方法实现实时电池退化状态估计对是安全、有效的电池管理系统中非常重要的环节\cite{You2017}。电池健康状态可以用来预测电池的预期寿命，但是通过直接测量电池内部电化学反应参数来进行在线电池健康状态估计的方法目前仍十分有限\cite{Barré2013}。
 
 SOH是一个用于量化电池的一般状态和与未使用状态相比提供指定性能能力的指标，这个性能可以用容量或阻抗来衡量。我们选择电池的容量作为其健康指标，因为容量与电池的能量储存能力有关，直接影响电池剩余运行时间和寿命。容量衰减估计这一问题已经引起了工业界和学术界的广泛关注，大量的方法已经被提出。现有的实现电池容量退化估计的方法主要包括基于电化学模型的方法、基于等效电路的方法和数据驱动的方法。电化学模型近似描述电池在操作期间内发生的化学过程，使用这种方法要求对电池工作机理（如电极材料和电解质的性质）的非常详尽的认识，同时该方法通常利用复杂的偏微分方程，使得其对存储空间和计算能力的要求很高。等效电路模型使用具有经验非线性参数的电路组件取代实际电池元件。与电化学模型相比，等效电路模型使用较少的输入，大大减少了需要学习的参数数量。但这种方法的预测性能很大程度上取决于对“等效”假设的准确性。事实上，假设往往难以拟合实际工作情况，导致等效电路模型准确性和鲁棒性有限。此外，为了在不同的电池荷电状态值下确定等效电路模型参数（例如欧姆阻抗和并联电阻-电容阻抗），通常需要进行脉冲放电和电化学阻抗谱分析，然而，这些测量并不适用于在线应用。
 
@@ -115,10 +113,8 @@ BHUMP可以用于电池管理系统，取代传统的等效电路模型进行电
 
 源代码开放获取（作者没有公开数据预处理和特征工程部分的代码）。
 
-\section{参考文献}
-
-\bibliographystyle{plain}
-\bibliography{reference}
+\bibliographystyle{unsrt}
+\bibliography{reference.bib}
 
 \end{document}
 
