update translation, adding citations

--- a/document.tex
+++ b/document.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 \usepackage{booktabs} % professional-quality tables
+\usepackage{cite}
 
 \title{基于机器学习流水线的电池健康状态估计方法}
 
@@ -33,15 +34,13 @@
 
 可充电锂离子电池在许多应用领域中都扮演着重要角色，包括便携式电子设备、医疗设备、电网的可再生能源消纳环节和电动汽车等。在2010年至2016年期间，锂离子电池价格陡降73％，在2017年达到历史最低点，为每千瓦时273美元\cite{ref1}，这为估值高达650亿美元的巨大的储能市场打开了大门\cite{ref2}。不管应用场景如何，锂离子电池随着时间而老化，且在老化过程中，电池呈现出容量降低、内阻增大的趋势。电池的老化速度受动态运行条件影响，包括不同的充放电速率、不同的运行电压限制和运行过程中的温度变化。能够不依赖具体机理、使用数据驱动方法实现实时电池退化状态估计对是安全、有效的电池管理系统中非常重要的环节\cite{You2017}。电池健康状态可以用来预测电池的预期寿命，但是通过直接测量电池内部电化学反应参数来进行在线电池健康状态估计的方法目前仍十分有限\cite{Barré2013}。
 
-SOH是一个用于量化电池的一般状态和与未使用状态相比提供指定性能能力的指标，这个性能可以用容量或阻抗来衡量。我们选择电池的容量作为其健康指标，因为容量与电池的能量储存能力有关，直接影响电池剩余运行时间和寿命。容量衰减估计这一问题已经引起了工业界和学术界的广泛关注，大量的方法已经被提出。现有的实现电池容量退化估计的方法主要包括基于电化学模型的方法、基于等效电路的方法和数据驱动的方法。电化学模型近似描述电池在操作期间内发生的化学过程，使用这种方法要求对电池工作机理（如电极材料和电解质的性质）的非常详尽的认识，同时该方法通常利用复杂的偏微分方程，使得其对存储空间和计算能力的要求很高。等效电路模型使用具有经验非线性参数的电路组件取代实际电池元件。与电化学模型相比，等效电路模型使用较少的输入，大大减少了需要学习的参数数量。但这种方法的预测性能很大程度上取决于对“等效”假设的准确性。事实上，假设往往难以拟合实际工作情况，导致等效电路模型准确性和鲁棒性有限。此外，为了在不同的电池荷电状态值下确定等效电路模型参数（例如欧姆阻抗和并联电阻-电容阻抗），通常需要进行脉冲放电和电化学阻抗谱分析，然而，这些测量并不适用于在线应用。
+SOH是一个用于量化电池的一般状态和与未使用状态相比提供指定性能能力的指标，这个性能可以用容量或阻抗来衡量。我们选择电池的容量作为其健康指标，因为容量与电池的能量储存能力有关，直接影响电池剩余运行时间和寿命。容量衰减估计这一问题已经引起了工业界和学术界的广泛关注\cite{Barré2013, Zhang2011, Farmann2015, Hannan2017}，大量的方法已经被提出。现有的实现电池容量退化估计的方法主要包括基于电化学模型的方法\cite{Hu2012, Feng2015, Andre2011}、基于等效电路的方法\cite{ref11, ref12, Prasad2013}和数据驱动的方法\cite{Severson2019, Saha2008, Goebel2008, Hu2015, Klass2014, Attia2020}。电化学模型近似描述电池在操作期间内发生的化学过程，使用这种方法要求对电池工作机理（如电极材料和电解质的性质）的非常详尽的认识，同时该方法通常利用复杂的偏微分方程，使得其对存储空间和计算能力的要求很高。等效电路模型使用具有经验非线性参数的电路组件取代实际电池元件\cite{Feng2015}。与电化学模型相比，等效电路模型使用较少的输入，大大减少了需要学习的参数数量。但这种方法的预测性能很大程度上取决于对“等效”假设的准确性。事实上，假设往往难以拟合实际工作情况，导致等效电路模型准确性和鲁棒性有限\cite{Hu2012}。此外，为了在不同的电池荷电状态值下确定等效电路模型参数（例如欧姆阻抗和并联电阻-电容阻抗），通常需要进行脉冲放电\cite{Coleman2008}和电化学阻抗谱分析\cite{Andre2011, Waag2013, Tröltzsch2006}，然而，这些测量并不适用于在线应用。
 
-相反地，数据驱动的方法有着诸多好处，包括1）这种方法与具体化学机理无关和2）这种方法能够分析更完整的退化过程，如在小负载工况下的容量退化过程（这种情形往往会被上述两种方法忽略）。到目前为止，许多研究已经使用机器学习方法进行电池健康状态估计的分析。增量容量分析和差分电压分析是分析电池老化机理的方法。几项研究表明，这类方法可以用于离线和在线电池容量性能衰退估计。然而，这类方法有几个缺点，为了得到增量容量曲线，需要对容量-电压曲线进行微分，这会放大噪音并将其传播到算法中。此外，这类方法工作的前提是两条曲线覆盖足够的电压范围，并限制在低充电电流率（1/5到1/25倍率）下，以获得高保真曲线。只有当充电时使用低电流值并准确记录容量-电压曲线的关键部分，才能捕捉到增量容量曲线中的特定峰值点并据此进行在线的电池容量估计。
+相反地，数据驱动的方法有着诸多好处，包括1）这种方法与具体化学机理无关和2）这种方法能够分析更完整的退化过程，如在小负载工况下的容量退化过程（这种情形往往会被上述两种方法忽略）。到目前为止，许多研究已经使用机器学习方法进行电池健康状态估计的分析。增量容量分析和差分电压分析是分析电池老化机理的方法\cite{Birkl2017}。几项研究表明\cite{Birkl2017, Li2019, Li2018a, ref26, Feng2019}，这类方法可以用于离线和在线电池容量性能衰退估计。然而，这类方法有几个缺点，为了得到增量容量曲线，需要对容量-电压曲线进行微分，这会放大噪音并将其传播到算法中。此外，这类方法工作的前提是两条曲线覆盖足够的电压范围，并限制在低充电电流率（1/5到1/25倍率）下\cite{Li2018b, Dubarry2006, Weng2013}，以获得高保真曲线。只有当充电时使用低电流值并准确记录容量-电压曲线的关键部分，才能捕捉到增量容量曲线中的特定峰值点并据此进行在线的电池容量估计。
 
-为了解决上述问题，一种替代方法是使用原始的电压-时间数据作为算法输入进行训练，从而消除微分操作。值得注意的是Richardson等人提出了一种方法，这种方法首先对电压-时间数据进行Savitsky-Golay滤波使之变得平滑，然后将等间距电压值作为高斯过程回归（GPR）算法的输入。
+为了解决上述问题，一种替代方法是使用原始的电压-时间数据作为算法输入进行训练，从而消除微分操作\cite{Yang2018, Richardson2018}。值得注意的是Richardson等人提出了一种方法\cite{Richardson2018}，这种方法首先对电压-时间数据进行Savitsky-Golay滤波使之变得平滑，然后将等间距电压值作为高斯过程回归（GPR）算法的输入。但是，GPR的训练过程消耗很多的计算资源（计算复杂度主要取决于核函数决定）\cite{ref33}，使得它并不适用于在线电池容量估计场景，此外，高计算复杂性使得这一算法很难向大规模电池退化数据集拓展，最后，GPR，对输入的电压-时间曲线的部分非常敏感。其他基于贝叶斯的方法，例如相关向量机（RVM）\cite{ref34}，也已用于估计电池容量退化，但是RVM也同样面临因训练速度慢而难以应用的问题，尤其是当与其他频率主义方法相比时\cite{Ben-Shimon2006}。Shen\cite{ref33}等人提出了加速GPR训练过程的方法，代价是牺牲预测精度。与文献\cite{Richardson2018}使用充电曲线的恒流充电段策略不同，Wang等人\cite{Wang2018}使用了恒压充电段作为输入，通过支持向量回归（SVR）来估计容量衰减。SVR确实比GPR速度快，但这种方法并不能给出预测结果的不确定度。应用上往往需要结合估计结果和结果的不确定度量以提供足够的信息进行决策，SVR在不确定度估计方面的缺失是难以将它应用在复杂动态系统（如锂离子电池）寿命预测的主要原因\cite{ref37}。
 
-但是，GPR的训练过程消耗很多的计算资源，使得它并不适用于在线电池容量估计场景，此外，高计算复杂性使得这一算法很难向大规模电池退化数据集拓展，最后，GPR，对输入的电压-时间曲线的部分非常敏感。其他基于贝叶斯的方法，例如相关向量机（RVM），也已用于估计电池容量退化，但是RVM也同样面临因训练速度慢而难以应用的问题，尤其是当与其他频率主义方法相比时。Shen等人提出了加速GPR训练过程的方法，代价是牺牲预测精度。与文献32使用充电曲线的恒流充电段策略不同，Wang等人使用了恒压充电段作为输入，通过支持向量回归（SVR）来估计容量衰减。SVR确实比GPR速度快，但这种方法并不能给出预测结果的不确定度。应用上往往需要结合估计结果和结果的不确定度量以提供足够的信息进行决策，SVR在不确定度估计方面的缺失是难以将它应用在复杂动态系统（如锂离子电池）寿命预测的主要原因。
-
-过去的研究或对SOH估计的不确定度评估有限，或根本没有进行评估。我们提出的模型（battery health and uncertainty management pipeline，以下简称BHUMP），能够实时电池健康状态估计并给出估计结果的不确定度。BHUMP对获得的数据流进行分层操作，首先，在原始充电曲线分段上进行特征工程研究，继而算法自动进行离线特征提取、通过对抗样本（人为添加噪声诱导模型生成错误结果）进行数据增广并借助四种机器学习算法得到电池健康状态及其不确定度的估计。具体地，不确定性量化通过校准误差和改进的准确度度量（$\alpha$−$\beta$ 准确度区域）实现。我们在179块电池上对算法进行评估，这些电池采用不同的结构形式（圆柱电池、方形电池或软包电池）、不同正极材料（磷酸铁锂或钴酸锂）、不同充电协议（恒流充电、恒流-恒压充电或两步快速充电协议）和不同充放电倍率。
+过去的研究或对SOH估计的不确定度评估有限，或根本没有进行评估\cite{Hu2012, Feng2015, Andre2011, ref11, ref12, Prasad2013, Severson2019, Saha2008, Goebel2008, Hu2015, Klass2014, Attia2020, Coleman2008, Waag2013, Tröltzsch2006, Birkl2017, Li2019, Li2018a, ref26, Feng2019, Li2018b, Dubarry2006, Weng2013, Yang2018, Richardson2018, ref33, ref34, Ben-Shimon2006, Wang2018}。我们提出的模型（battery health and uncertainty management pipeline，以下简称BHUMP），能够实时电池健康状态估计并给出估计结果的不确定度。BHUMP对获得的数据流进行分层操作，首先，在原始充电曲线分段上进行特征工程研究，继而算法自动进行离线特征提取、通过对抗样本（人为添加噪声诱导模型生成错误结果）进行数据增广并借助四种机器学习算法得到电池健康状态及其不确定度的估计。具体地，不确定性量化通过校准误差和改进的准确度度量（$\alpha$−$\beta$ 准确度区域）实现。毫无疑问现实世界中电池有不同的设计\cite{ref38}，使用不同材料\cite{Seh2016}，为了验证模型的泛化性能，我们在179块电池上对算法进行评估，这些电池采用不同的结构形式（圆柱电池、方形电池或软包电池）、不同正极材料（磷酸铁锂或钴酸锂）、不同充电协议（恒流充电、恒流-恒压充电或两步快速充电协议）和不同充放电倍率。
 
 本文优化改进了以往的电池健康状态估计方法，并针对我们提出的机器学习流水线模型进行了大量测试，同时定义了用于电池健康状态估计及其不确定性度量问题中使用的机器学习模型中的不确定性的指标。BHUMP为研究者提供了一套高鲁棒性的电池健康状态估计解决方案，这套框架对各种不同化学机理的电池在各种工作条件下的状态预测都适用。BHUMP建立电池模型并从中提取中特征，这些特征能够充分反映电池内部老化过程并估计电池健康状态，这一方法不仅能通过不超过15分钟的充放电循环特征实现预测，同时预测精度比以往的方法都要好。我们的算法输出准确的电池健康状态估计及其不确定性，这些输出将被进一步用于估计电池荷电状态和剩余寿命，从而指导电池充放电决策，改善电池性能并最终延长电池寿命。
 
