update translation file, adding data availability and code availability part

--- a/document.tex
+++ b/document.tex
@@ -8,6 +8,7 @@
 \usepackage{booktabs} % professional-quality tables
 \usepackage{cite}
 \usepackage{subcaption}
+\usepackage{hyperref}
 
 \title{基于机器学习流水线的电池健康状态估计方法}
 
@@ -239,15 +240,15 @@ BHUMP可以用于电池管理系统，取代传统的等效电路模型进行电
 
 综上，我们的工作强调了使用部分充电段作为输入，结合多种机器学习模型进行电池退化状态预测的方法。更重要地，我们强调了在实际工程应用中对预测结果进行不确定性量化的重要性。最后，我们证明了我们提出的机器学习流水线方法在计算效率和结果准确性方面的优势。我们认为，这种机器学习管道方法在未来的电池管理系统中将成为标准化应用。
 
-\section{方法}
+% \section{方法}
 
 \section{数据可用性声明}
 
-数据集开放获取。具体地，第一组数据可以在下载；第二组数据可以在下载；第三组数据可以在下载。
+数据集开放获取。具体地，第一组数据可以在 \href{https://www.nasa.gov/content/prognostics-center-of-excellence-data-set-repository}{https://www.nasa.gov/content/prognostics-center-of-excellence-data-set-repository} 和 \href{https://web.calce.umd.edu/batteries/data.htm}{https://web.calce.umd.edu/batteries/data.htm} 下载；第二组数据可以在 \href{https://data.matr.io/1/projects/5c48dd2bc625d700019f3204}{https://data.matr.io/1/projects/5c48dd2bc625d700019f3204} 下载；第三组数据可以在 \href{https://ora.ox.ac.uk/objects/uuid:03ba4b01-cfed-46d3-9b1a-7d4a7bdf6fac}{https://ora.ox.ac.uk/objects/uuid:03ba4b01-cfed-46d3-9b1a-7d4a7bdf6fac} 下载。
 
 \section{代码可用性声明}
 
-源代码开放获取（作者没有公开数据预处理和特征工程部分的代码）。
+源代码开放获取，地址为 \href{http://doi.org/10.5281/zenodo.4390152}{http://doi.org/10.5281/zenodo.4390152} ，作者没有公开数据预处理和特征工程部分的代码。
 
 \small
 \bibliographystyle{unsrt}
